# transcriptblocker

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: generate_perturbation.sh  setup_blackhole.sh  test_e2e.py
tests/: test_effectiveness.py  test_mixer.py
transcriptblocker/: __init__.py  audio_devices.py  audio_mixer.py  cli.py  config.py  generate_uap.py  menubar.py
